fix: submenu background on smaller devices

--- a/src/scss/05_components/_components.support-menu.scss
+++ b/src/scss/05_components/_components.support-menu.scss
@@ -152,7 +152,7 @@
     width: 100%;
 
     @at-root html.lia-variant-dark & {
-      background-color: rgb(var(--lia-anthracite));
+      background-color: rgb(var(--lia-grey-dark));
     }
 
     .lia-link {
